# mybot_description

./: CMakeLists.txt  README.md  package.xml
config/: joint_names_mybot_description.yaml
launch/: display.launch  gazebo.launch
meshes/: caster1.STL  wheel_left.STL
mybot_description/: package.xml
mybot_description/config/: joint_names_mybot_description.yaml
mybot_description/launch/: display.launch  gazebo.launch
mybot_description/meshes/: caster2.STL  wheel_right.STL
mybot_description/urdf/: mybot_description.csv  mybot_description.urdf
urdf/: mybot_description.csv  mybot_description.urdf
